--- a/404.html
+++ b/404.html
@@ -216,6 +216,7 @@
         <!-- Custom JS scripts -->
         <script src="mermaid.min.js"></script>
         <script src="mermaid-init.js"></script>
+        <script src="giscus.js"></script>
 
 
     </div>
