--- a/resources.html
+++ b/resources.html
@@ -176,7 +176,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
+                        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="资源"><a class="header" href="#资源">资源</a></h1>
 <ul>
 <li><a href="http://sokobano.de/wiki/">http://sokobano.de/wiki/</a>: 德国推箱子 Wiki.</li>
@@ -233,6 +233,7 @@
         <!-- Custom JS scripts -->
         <script src="mermaid.min.js"></script>
         <script src="mermaid-init.js"></script>
+        <script src="giscus.js"></script>
 
 
     </div>
