--- a/level/index.html
+++ b/level/index.html
@@ -412,7 +412,12 @@ ___HHH__
                     </main>
 
                     <!-- Giscus -->
-                    <div id="giscus-container"></div>
+                    <script src="https://giscus.app/client.js" data-repo="ShenMian/sokoban-tutorial"
+                        data-repo-id="R_kgDOLaAVUw" data-category="Comments" data-category-id="DIC_kwDOLaAVU84CeEvG"
+                        data-mapping="pathname" data-strict="0" data-reactions-enabled="1" data-emit-metadata="0"
+                        data-input-position="top" data-theme="preferred_color_scheme" data-lang="zh-CN"
+                        data-loading="lazy" crossorigin="anonymous" async>
+                        </script>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
