deploy: 3a3d5d8cb3e50871ef86ca256909acf04cb2956c

--- a/print.html
+++ b/print.html
@@ -1388,10 +1388,9 @@ lower_bounds
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="死锁deadlock"><a class="header" href="#死锁deadlock">死锁(Deadlock)</a></h1>
 <h2 id="什么是死锁"><a class="header" href="#什么是死锁">什么是死锁</a></h2>
-<p>推箱子的通关条件是箱子和目标位置一一对应. 但在一些情况下, 箱子永远不能被推到目标上, 推箱子通关条件永远无法达成.</p>
+<p>推箱子的通关条件是每个箱子都被推至一个目标位置. 但在一些情况下, 箱子永远不能再被推到目标上, 导致无法通关. 这种情况称之为死锁.</p>
 <h2 id="为什么要检测死锁"><a class="header" href="#为什么要检测死锁">为什么要检测死锁</a></h2>
-<p>死锁产生后, 该状态及其衍生状态一定无解, 但依然可以控制玩家继续推动其他可推动的箱子, 因此求解器将继续浪费大量的资源去搜索一定无解的状态.
-因此需要有检测死锁产生的方法, 来跳过不必要的搜索.</p>
+<p>死锁产生后, 该状态及其衍生状态一定无解, 求解器将浪费大量的资源去搜索一定无解的状态. 因此需要对死锁进行检测, 从而跳过这些无意义的搜索.</p>
 <p>死锁检测可以用于可行性剪枝.</p>
 <h2 id="何时检测死锁"><a class="header" href="#何时检测死锁">何时检测死锁</a></h2>
 <p>死锁按照箱子和玩家位置的关系可以分为三类:</p>
