--- a/print.html
+++ b/print.html
@@ -1399,14 +1399,22 @@ lower_bounds
 <li>与箱子位置有关和玩家位置无关的.</li>
 <li>与箱子和玩家位置有关的.</li>
 </ol>
-<p>第 1 类为<strong>静态死锁</strong>, 因为其与箱子和玩家的位置均无关, 可以在只知道关卡地形和目标位置的情况下进行计算, 而目标位置是静态的.<br />
-这类死锁可以在关卡地形变化时计算.<br />
-当箱子被推到目标后死锁了, 此时可以将死锁的箱子视为不可移动的墙, 关卡地形发生变化, 需要重新计算.</p>
-<p>第 2 类为<strong>冻结死锁(freeze deadlocks)</strong>, 这类死锁产生的原因是箱子之间的相互阻碍导致多个箱子同时死锁.<br />
+<p>分别为:</p>
+<ol>
+<li>
+<p><strong>静态死锁</strong>: 这种死锁与箱子和玩家的位置无关, 可以在只知道关卡地形和目标位置的情况下进行计算.<br />
+标位置是静态的, 而关卡地形可能发生变化. 比如当箱子被推到目标后死锁了, 此时可以将死锁的箱子视为不可移动的墙, 关卡地形发生变化, 需要重新计算.</p>
+</li>
+<li>
+<p><strong>冻结死锁(freeze deadlocks)</strong>: 这种死锁产生的原因是箱子之间的相互阻碍导致多个箱子同时死锁.<br />
 这类死锁的检测时机是箱子推动后.</p>
-<p>第 3 类包括<strong>畜栏死锁(corral deadlocks)</strong>/<strong>闭对角死锁(closed diagonal deadlocks)</strong>. 这类死锁和冻结死锁的区别是前者只要在箱子推动后变成了一定的模式就会产生, 而后者是否产生死锁还需要看玩家在箱子推动后的位置, 即箱子推动方向.<br />
-畜栏死锁是一种更为高级的冻结死锁, 因为即使在畜栏死锁后, 箱子仍然可以被推动, 但最终一定会形成冻结死锁.<br />
+</li>
+<li>
+<p>包括<strong>畜栏死锁(corral deadlocks)</strong>/<strong>闭对角死锁(closed diagonal deadlocks)</strong>: 这类死锁和冻结死锁的区别是前者只要在箱子推动后变成了一定的模式就会产生, 而后者是否产生死锁还需要看玩家在箱子推动后的位置, 即箱子推动方向.</p>
+<p>畜栏死锁是一种更为高级的冻结死锁, 因为即使在畜栏死锁后, 箱子仍然可以被推动, 但最终一定会形成冻结死锁.<br />
 畜栏死锁的检测时机是箱子推动后, 有玩家不可达的区域面积减小. 这意味着玩家可能无法再回到该不可达区域, 导致区域周边的箱子的移动自由度减少.</p>
+</li>
+</ol>
 <h2 id="参考-1"><a class="header" href="#参考-1">参考</a></h2>
 <ul>
 <li><a href="http://sokobano.de/wiki/index.php?title=Deadlocks">http://sokobano.de/wiki/index.php?title=Deadlocks</a></li>
