deploy: 62cf5cc28c3213eaddd0ca37097bd8d7ff7b3726

--- a/index.html
+++ b/index.html
@@ -234,6 +234,8 @@
 <ul>
 <li><a href="https://www.bilibili.com/video/BV1Ph41117YT">【GM】火遍全球的推箱子，那些你所不知道的故事！· Bilibili</a>: 该视频详细介绍了推箱子的历史和发展.</li>
 </ul>
+<h2 id="版权"><a class="header" href="#版权">版权</a></h2>
+<p>本文遵循 <a href="https://creativecommons.org/licenses/by/4.0/">CC-BY 4.0</a> 协议发布. 部分图片来源于互联网, 版权归原作者所有.</p>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
 <p><a href="https://www.sokoban.jp/history.html">https://www.sokoban.jp/history.html</a></p>
 </div>
