deploy: 23b288fe1c51b6fb7e7d02161ce2d0aa9b9d1bbe

--- a/print.html
+++ b/print.html
@@ -860,7 +860,7 @@ for level in Level::load(&amp;fs::read_to_string(path).unwrap()).filter_map(|x| 
 </div>
 <p>根据数据, 可以得出以下结论:</p>
 <ol>
-<li>加载单个关卡的平均耗时为 0.007 ms, 即 7 μs.</li>
+<li>加载单个关卡的平均耗时约 7 μs.</li>
 <li>加载 n 个关卡和加载第 n 个关卡的耗时存在显著差异, 说明后者确实有性能的提升.</li>
 </ol>
 <h4 id="错误处理"><a class="header" href="#错误处理">错误处理</a></h4>
