--- a/print.html
+++ b/print.html
@@ -1424,10 +1424,11 @@ lower_bounds
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="资源"><a class="header" href="#资源">资源</a></h1>
 <ul>
-<li><a href="http://sokobano.de/wiki/">http://sokobano.de/wiki/</a>: 德国推箱子 Wiki.</li>
-<li><a href="https://www.sokoban-online.de/">https://www.sokoban-online.de/</a>: 推箱子软件 JSoko.</li>
+<li><a href="http://sokobano.de/wiki/">http://sokobano.de/wiki/</a>: 推箱子 Wiki, 德国.</li>
 <li><a href="https://sourceforge.net/projects/sokobanyasc/">https://sourceforge.net/projects/sokobanyasc/</a> 推箱子软件 SokobanYASC.</li>
-<li><a href="https://sokoban.cn/">https://sokoban.cn/</a>: 中国推箱子在线平台.</li>
+<li><a href="https://www.sokoban-online.de/">https://www.sokoban-online.de/</a>: 推箱子软件 JSoko.</li>
+<li><a href="https://sokoban.cn/">https://sokoban.cn/</a>: 推箱子平台, 魔方吧推箱子比赛, 中国.</li>
+<li><a href="https://sokoban.jp/">https://sokoban.jp/</a> 推箱子官网, 日本.</li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="术语表"><a class="header" href="#术语表">术语表</a></h1>
