deploy: 5dd8c76cd422af59bf859b15d90bee6739813d41

--- a/print.html
+++ b/print.html
@@ -1427,6 +1427,7 @@ lower_bounds
 <li><a href="http://sokobano.de/wiki/">http://sokobano.de/wiki/</a>: 推箱子 Wiki, 德国.</li>
 <li><a href="https://sourceforge.net/projects/sokobanyasc/">https://sourceforge.net/projects/sokobanyasc/</a> 推箱子软件 SokobanYASC.</li>
 <li><a href="https://www.sokoban-online.de/">https://www.sokoban-online.de/</a>: 推箱子软件 JSoko.</li>
+<li><a href="https://ygp.orgfree.com/">https://ygp.orgfree.com/</a> 推箱子软件 YSokoban.</li>
 <li><a href="https://sokoban.cn/">https://sokoban.cn/</a>: 推箱子平台, 魔方吧推箱子比赛, 中国.</li>
 <li><a href="https://sokoban.jp/">https://sokoban.jp/</a> 推箱子官网, 日本.</li>
 </ul>
@@ -1434,7 +1435,7 @@ lower_bounds
 <h1 id="术语表"><a class="header" href="#术语表">术语表</a></h1>
 <div class="table-wrapper"><table><thead><tr><th>中文</th><th>英文</th></tr></thead><tbody>
 <tr><td>求解器</td><td>solver</td></tr>
-<tr><td>解/解决方案</td><td>solution</td></tr>
+<tr><td>解决方案/解</td><td>solution</td></tr>
 <tr><td>动作</td><td>action</td></tr>
 </tbody></table>
 </div>
