--- a/glossary_of_terms.html
+++ b/glossary_of_terms.html
@@ -189,7 +189,7 @@
 <h1 id="术语表"><a class="header" href="#术语表">术语表</a></h1>
 <div class="table-wrapper"><table><thead><tr><th>中文</th><th>英文</th></tr></thead><tbody>
 <tr><td>求解器</td><td>solver</td></tr>
-<tr><td>解/解决方案</td><td>solution</td></tr>
+<tr><td>解决方案/解</td><td>solution</td></tr>
 <tr><td>动作</td><td>action</td></tr>
 </tbody></table>
 </div>
