deploy: 674a2082fb6df6341422aee4b4f41a1ba2115338

--- a/print.html
+++ b/print.html
@@ -1245,7 +1245,7 @@ impl PartialOrd for Node {
 <p><a href="https://en.wikipedia.org/wiki/A*_search_algorithm">https://en.wikipedia.org/wiki/A*_search_algorithm</a></p>
 </div>
 <div class="footnote-definition" id="4"><sup class="footnote-definition-label">4</sup>
-<p><a href="https://en.wikipedia.org/wiki/Iterative_deepening_A">https://en.wikipedia.org/wiki/Iterative_deepening_A</a>*</p>
+<p><a href="https://en.wikipedia.org/wiki/Iterative_deepening_A*">https://en.wikipedia.org/wiki/Iterative_deepening_A*</a></p>
 </div>
 <div class="footnote-definition" id="5"><sup class="footnote-definition-label">5</sup>
 <p><a href="https://ieeexplore.ieee.org/document/9231929">https://ieeexplore.ieee.org/document/9231929</a></p>
