--- a/resources.html
+++ b/resources.html
@@ -198,7 +198,12 @@
 
 
                         <!-- Giscus -->
-                        <div id="giscus-container"></div>
+                        <script src="https://giscus.app/client.js" data-repo="ShenMian/sokoban-tutorial"
+                            data-repo-id="R_kgDOLaAVUw" data-category="Comments" data-category-id="DIC_kwDOLaAVU84CeEvG"
+                            data-mapping="pathname" data-strict="0" data-reactions-enabled="1" data-emit-metadata="0"
+                            data-input-position="top" data-theme="preferred_color_scheme" data-lang="zh-CN"
+                            data-loading="lazy" crossorigin="anonymous" async>
+                            </script>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
@@ -251,7 +256,6 @@
         <!-- Custom JS scripts -->
         <script src="mermaid.min.js"></script>
         <script src="mermaid-init.js"></script>
-        <script src="giscus.js"></script>
 
 
     </div>
