--- a/solver/index.html
+++ b/solver/index.html
@@ -382,7 +382,12 @@ impl PartialOrd for Node {
 
 
                         <!-- Giscus -->
-                        <div id="giscus-container"></div>
+                        <script src="https://giscus.app/client.js" data-repo="ShenMian/sokoban-tutorial"
+                            data-repo-id="R_kgDOLaAVUw" data-category="Comments" data-category-id="DIC_kwDOLaAVU84CeEvG"
+                            data-mapping="pathname" data-strict="0" data-reactions-enabled="1" data-emit-metadata="0"
+                            data-input-position="top" data-theme="preferred_color_scheme" data-lang="zh-CN"
+                            data-loading="lazy" crossorigin="anonymous" async>
+                            </script>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
@@ -435,7 +440,6 @@ impl PartialOrd for Node {
         <!-- Custom JS scripts -->
         <script src="../mermaid.min.js"></script>
         <script src="../mermaid-init.js"></script>
-        <script src="../giscus.js"></script>
 
 
     </div>
