--- a/print.html
+++ b/print.html
@@ -1399,12 +1399,12 @@ lower_bounds
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="死锁deadlock"><a class="header" href="#死锁deadlock">死锁(Deadlock)</a></h1>
-<h2 id="什么是死锁"><a class="header" href="#什么是死锁">什么是死锁</a></h2>
+<h2 id="what"><a class="header" href="#what">什么是死锁</a></h2>
 <p>推箱子的通关条件是每个箱子都被推至一个目标位置. 但在一些情况下, 箱子永远不能再被推到目标上(比如箱子被推入不是目标的死角), 导致无法通关. 这种情况称之为死锁.</p>
-<h2 id="为什么要检测死锁"><a class="header" href="#为什么要检测死锁">为什么要检测死锁</a></h2>
+<h2 id="why"><a class="header" href="#why">为什么要检测死锁</a></h2>
 <p>死锁检测可以用于可行性剪枝.<br />
 死锁产生后, 该状态及其衍生状态一定无解, 求解器将浪费大量的资源去搜索一定无解的状态. 因此需要对死锁进行检测, 从而跳过这些无意义的搜索.</p>
-<h2 id="何时检测死锁"><a class="header" href="#何时检测死锁">何时检测死锁</a></h2>
+<h2 id="when"><a class="header" href="#when">何时检测死锁</a></h2>
 <p>死锁按照箱子和玩家位置的关系可以分为三类:</p>
 <ol>
 <li>与箱子和玩家位置无关的.</li>
@@ -1428,9 +1428,10 @@ lower_bounds
 畜栏死锁的检测时机是箱子推动后, 有玩家不可达的区域面积减小. 这意味着玩家可能无法再回到该不可达区域, 导致区域周边的箱子的移动自由度减少.</p>
 </li>
 </ol>
-<h2 id="如何检测死锁"><a class="header" href="#如何检测死锁">如何检测死锁</a></h2>
+<p>TODO: 利用图片直观的展示各类死锁</p>
+<h2 id="how"><a class="header" href="#how">如何检测死锁</a></h2>
 <h3 id="静态死锁"><a class="header" href="#静态死锁">静态死锁</a></h3>
-<p>将箱子放置在目标位置, 然后拉动箱子到所有可能位置. 箱子到达的区域内的箱子一定能被推动到目标, 而箱子不可达区域一定无法被推动到目标, 即静态死区区域.</p>
+<p>将箱子放置在目标位置, 然后拉动箱子到所有可能位置. 箱子到达的区域内的箱子一定能被推动到目标, 而箱子不可达区域一定无法被推动到目标, 即死区.</p>
 <h3 id="冻结死锁"><a class="header" href="#冻结死锁">冻结死锁</a></h3>
 <p>一个箱子只能在垂直和水平方向上移动, 若箱子的两个方向都被箱子遮挡(即上或下被遮挡, 且左或右被遮挡), 则该箱子处于冻结死锁.</p>
 <p>能遮挡箱子的元素有两个:</p>
